--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -26,7 +26,7 @@
     flex-direction: column;
   }
 
-  @media screen and (max-width: 450px) {
+  @media screen and (max-width: 757px) {
     padding: 6rem 1rem 2rem;
   }
 }
@@ -64,6 +64,9 @@
 
     .head-text {
       color: azure;
+      @media screen and (max-width: 757px) {
+        font-size: 1em;
+      }
     }
 
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
